# toy-torch

./: .gitignore  Cargo.toml  README.md
benches/: elementwise_chain.rs
diagrams/: README.md  build.py
examples/: compile.rs  fuse.rs  linreg.rs  mlp.rs
src/: autograd.rs  error.rs  lib.rs  op.rs  shape.rs  tape.rs  tensor.rs
src/graph/: codegen.rs  compile.rs  fusion.rs  jit.rs  mod.rs  node.rs  reduction.rs  tracer.rs
tests/: autograd.rs  codegen.rs  compile.rs  fusion.rs  matmul.rs
